--- a/README.org
+++ b/README.org
@@ -56,11 +56,8 @@
    worth 0.01 times the amount of value of 1 hamburger before the
    machine was introduced.
 
-   
-   
-   
-
-*** The Relative Form of Value
+*** Forms of value
+**** The Relative Form of Value
     Keep in mind that the relative form of value manifests at exchange
     i.e. exchange-value.
 
@@ -102,7 +99,11 @@
     commodity (linen or coat) to a third commodity with an unchanging
     productiveness.
 
-*** The Equivalent Form of Value
+**** The Equivalent Form of Value
+**** The Elementary Form of Value as a Whole
     
     
     
+
+
+*** Fetishism of Commodities and the Secret Thereof
